@@ -82,6 +82,7 @@ $SMARTY->assign('js',$js);
 $SMARTY->assign('networks',$networks);
 $SMARTY->assign('network',$network);
 $SMARTY->assign('netid',$netid);
+$SMARTY->assign('device', isset($_GET['device']) ? $_GET['device'] : NULL);
 $SMARTY->display('chooseip.html');
 
 ?>
